--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-size: 15px;
 }
 .wrapper {
     font-size: 0;
@@ -43,3 +44,4 @@
 .wrapper .on a{
     font-size:11px;
 }
+
