--- a/css/home.css
+++ b/css/home.css
@@ -13,7 +13,7 @@ html,body{
     margin : auto;
     width : 1200px;
 }
-                   /*时间登陆注册*/
+                   /*时间登录注册*/
 .htop{
     height: 30px;
     background-image: linear-gradient(-360deg, #ccc, #fff);
